--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,23 +3,24 @@ pipeline {
        
     stages {
         stage('Build') {
-           
+            steps {
                 sh 'mvn -B -DskipTests clean package'
-            
+            }
         }
         stage('Test') {
-           
+            steps {
                 sh 'mvn test'
-        }
-            stage('POst'){
+            }
+            post {
+                always {
                     junit 'target/surefire-reports/*.xml'
                 }
-            
-        
+            }
+        }
         stage('Deliver') {
-            
+            steps {
                 sh './jenkins/scripts/deliver.sh'
-            
+            }
         }
     }
 }
